--- a/portugal-hotels.ipynb
+++ b/portugal-hotels.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,6 +473,62 @@
    "metadata": {},
    "source": [
     "# EDA & Visualizing hotel data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['hotel', 'is_canceled', 'lead_time', 'arrival_date_year',\n",
+       "       'arrival_date_month', 'arrival_date_week_number',\n",
+       "       'arrival_date_day_of_month', 'stays_in_weekend_nights',\n",
+       "       'stays_in_week_nights', 'adults', 'children', 'babies', 'meal',\n",
+       "       'country', 'market_segment', 'distribution_channel',\n",
+       "       'is_repeated_guest', 'previous_cancellations',\n",
+       "       'previous_bookings_not_canceled', 'reserved_room_type',\n",
+       "       'assigned_room_type', 'booking_changes', 'deposit_type', 'agent',\n",
+       "       'company', 'days_in_waiting_list', 'customer_type', 'adr',\n",
+       "       'required_car_parking_spaces', 'total_of_special_requests',\n",
+       "       'reservation_status', 'reservation_status_date'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns # delete this cell, do not need it"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will begin by talking about each column in more depth:\n",
+    "\n",
+    "* **hotel**- Either resort hotel, Algarve, or City hotel, Lisbon.  \n",
+    "* **is_canceled**- If a guest has cancelled a booking or not before checking into a hotel, value of 1 or 0 respectively.  \n",
+    "* **lead_time**- The day a guest made their booking, ie number of days before guest is expected to arrive.  \n",
+    "* **arrive_date_year**- The year the guest is expected to arrive at a hotel, from 2016-2017.  \n",
+    "* **arrival_date_month**- The month of the year the guest is expected to arrive at a hotel.  \n",
+    "* **arrival_date_week_number**- The week number (52 weeks in a year) the guest is expected to arrive at a hotel. \n",
+    "* **arrival_date_day_of_month**- The day of the month the guest is expected to arrive at a hotel.  \n",
+    "* **stays_in_weekend_nights**- The number of nights the guest is going to stay during the weekend.  \n",
+    "* **stays_in_week_nights**- The number of nigths the guest is going to stay during the week.  \n",
+    "* **adults**- Number of adults booked to stay in the room for the duration of their time in the hotel.  \n",
+    "* **children**- Number of children booked to stay in the room for the duration of their time in the hotel.  \n",
+    "* **babies**- Number of babies booked to stay in a room for the duration of their time in the hotel.  \n",
+    "* **meals**- Type of meal booked. Categories are presented in standard hospitality meal packages: \n",
+    "    * Undefined/SC – no meal package  \n",
+    "    * BB – Bed & Breakfast  \n",
+    "    * HB – Half board (breakfast and one other meal – usually dinner)  \n",
+    "    * FB – Full board (breakfast, lunch and dinner)  "
    ]
   },
   {
