--- a/portugal-hotels.ipynb
+++ b/portugal-hotels.ipynb
@@ -1910,7 +1910,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:py382] *",
+   "display_name": "Python [conda env:py382]",
    "language": "python",
    "name": "conda-env-py382-py"
   },
